[project]
name = "anemone-db-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Watal M. Iwasaki", email = "heavywatal@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
